<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hello_screen.HelloScreenFragment">

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/hello"
        app:layout_constraintBottom_toTopOf="@id/tvSubheader1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSubheader1"
        style="@style/SubheaderStyle"
        android:text="@string/hello_subheader_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubheader2"
        style="@style/SubheaderStyle"
        android:layout_marginTop="@dimen/size_8dp"
        android:text="@string/hello_subheader2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubheader1" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/ButtonStyle"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>