<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEventCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginVertical="@dimen/size_16dp"
        android:background="@drawable/event_card_background"
        android:elevation="@dimen/size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImage"
            tools:text="Бесплатно, 16+" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/HeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubheader"
            tools:text="Нон-фикшн клуб: Послы джаза." />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/EventDescriptionStyle"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeader"
            tools:text="28 января в рамках «Нон-фикшн клуба» мы покажем фильм «Послы джаза» Хьюго Беркли. Это увлекательный рассказ ..." />

        <TextView
            android:id="@+id/tvLearnMore"
            style="@style/ClickableTextStyle"
            android:text="@string/event_card_learn_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginVertical="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clEventCardContainer">

        <Button
            android:id="@+id/btnDislike"
            style="@style/EventActionStyle"
            android:drawableTop="@drawable/ic_dislike"
            android:text="@string/dislike"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDontKnow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDontKnow"
            style="@style/EventActionStyle"
            android:drawableTop="@drawable/ic_refresh"
            android:text="@string/dont_know"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnLike"
            app:layout_constraintStart_toEndOf="@id/btnDislike"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLike"
            style="@style/EventActionStyle"
            android:drawableTop="@drawable/ic_like"
            android:text="@string/like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnDontKnow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>